Added text which displays the current level on the screen. Added a game over menu and created a new notification action to display the game over menu whenever the player's health hits 0.

--- a/Games/Knightmare/css/knightmare.css
+++ b/Games/Knightmare/css/knightmare.css
@@ -87,6 +87,10 @@ body {
     color: goldenrod;
 }
 
+#game_over_menu {
+    background-color: black;
+}
+
 #main_canvas {
     left: 0;
     top: 0;
