--- a/Games/Knightmare/css/knightmare.css
+++ b/Games/Knightmare/css/knightmare.css
@@ -1,8 +1,8 @@
 body {
     cursor: default;
     user-select: none;
-    font-family: arial, sans-serif;
-    font-size: 16px;
+    font-family: 'Press Start 2P';
+    font-size: 10px;
 
     background-color: lightcoral;
 }
@@ -83,11 +83,15 @@ body {
 }
 
 #control_menu {
-    background-color: pink;
-    color: goldenrod;
+    background-color: dodgerblue;
+    color: black;
 }
 
 #game_over_menu {
+    background-color: black;
+}
+
+#pause_menu {
     background-color: black;
 }
 
