--- a/Games/Knightmare/css/knightmare.css
+++ b/Games/Knightmare/css/knightmare.css
@@ -3,8 +3,25 @@ body {
     user-select: none;
     font-family: 'Press Start 2P';
     font-size: 10px;
+    /* height: 100%; */
+}
 
-    background-color: lightcoral;
+#background_image {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    z-index: 1;
+    background-image: url(../assets/9f1add05efe33ea7621ac7f9557bc140.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    -webkit-filter: blur(4px);
+    -moz-filter: blur(4px);
+    -o-filter: blur(4px);
+    -ms-filter: blur(4px);
+    filter: blur(4px);
 }
 
 #title {
@@ -13,19 +30,20 @@ body {
 }
 
 #title h1 {
-    color: rgb(90, 41, 0);
+    color: rgb(209, 130, 93);
     font-size: 24px;
 }
 
 #game_window {
     position: relative;
-    top: 50px;
+    top: 100px;
     width: 850px;
-    height: 460px;
+    height: 424px;
     margin: 0 auto;
 
-    background-color: royalblue;
-    border: 1px solid black;
+    background-color: black;
+    border: 5px solid black;
+    z-index: 1000;
 }
 
 #menu_block {
@@ -83,7 +101,7 @@ body {
     position: relative;
     bottom: 10px;
     font-size: 24px;
-    color: orangered;
+    color: rgb(202, 84, 5);
 }
 
 #exit_menu {
