Updated control menu and added a button to return to the main menu.

--- a/Games/Knightmare/css/knightmare.css
+++ b/Games/Knightmare/css/knightmare.css
@@ -109,8 +109,8 @@ body {
 }
 
 #control_menu {
-    background-color: dodgerblue;
-    color: black;
+    background-color: black;
+    color: whitesmoke;
 }
 
 #game_over_menu {
